# Ativeplay_mvp

./: .env.example  .gitignore  ANALISE_PARSING_ESTRATEGIA.md  CACHE_NAVIGATION_IMPLEMENTATION.md  Jorge.md  LIVE_CHANNELS_FIX.md  ROADMAP_MVP.md  analyze_m3u_chunks.py  debug-groups.js  index.html  nixpacks.toml  package-lock.json  package.json  prd_master.md  railway.toml  rascunho.md  test_rle_optimization.md  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts.map  vite.config.ts
docs/: m3u-patterns-analysis.md  m3u-visual-guide.md  optimization-recommendations.md
prd/: PRD_EPG_XMLTV.md  PRD_Subtitles_Overlay.md  subtitle_system.md  worker_improve.md
prds/: PRD_Dependencies.md  PRD_Filmes.md  PRD_Home.md  (+8 more)
server-rust/: .dockerignore  Cargo.toml  Dockerfile
server-rust/migrations/: 001_initial.sql  002_fix_group_hash_size.sql  003_schema_improvements.sql  004_device_ttl.sql  005_xtream_support.sql  006_xtream_only_cleanup.sql
server-rust/src/: config.rs  main.rs
server-rust/src/db/: mod.rs  models.rs  pool.rs
server-rust/src/db/repository/: groups.rs  items.rs  mod.rs  playlists.rs  series.rs  watch_history.rs
server-rust/src/models/: mod.rs  playlist.rs  session.rs
server-rust/src/routes/: admin.rs  health.rs  mod.rs  playlist.rs  proxy.rs  session.rs  watch_history.rs  xtream.rs
server-rust/src/services/: cache.rs  classifier.rs  cleanup.rs  db_cache.rs  m3u_parser.rs  mod.rs  redis.rs
server-rust/src/services/xtream/: client.rs  detector.rs  mod.rs  types.rs
server-rust/src/utils/: mod.rs
(+107 files in other folders)
