[package]
name = "ativeplay-server"
version = "1.0.0"
edition = "2021"
authors = ["AtivePlay"]
description = "High-performance IPTV backend server in Rust"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["stream", "gzip"] }

# Redis
redis = { version = "0.25", features = ["aio", "connection-manager", "tokio-comp"] }

# PostgreSQL
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Async utilities
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"

# Utilities
sha1 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
base64 = "0.21"
lru = "0.12"
url = "2.5"
urlencoding = "2.1"

# QR Code
qrcode = "0.13"
image = "0.24"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
